--- a/src/pages/landing-page.css
+++ b/src/pages/landing-page.css
@@ -108,6 +108,30 @@
   justify-content: flex-start;
   background-color: rgba(30, 206, 206, 1);
 }
+
+.landing-page-group115x {
+  top: 60px;
+  left: -363px;
+  width: 137px;
+  height: 45px;
+  display: flex;
+  padding: 0;
+  position: relative;
+  align-self: auto;
+  box-sizing: border-box;
+  align-items: flex-start;
+  flex-shrink: 1;
+  border-color: transparent;
+  border-style: none;
+  border-width: 0;
+  margin-right: 44px;
+  border-radius: 0px 0px 0px 0px;
+  margin-bottom: 0;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: rgba(30, 206, 206, 1);
+}
+
 .landing-page-text02 {
   top: 8px;
   left: 33px;
@@ -145,6 +169,30 @@
   justify-content: flex-start;
   background-color: rgba(255, 255, 255, 1);
 }
+
+.landing-page-group114x {
+  top: 60px;
+  left: -363px;
+  width: 137px;
+  height: 45px;
+  display: flex;
+  padding: 0;
+  position: relative;
+  align-self: auto;
+  box-sizing: border-box;
+  align-items: flex-start;
+  flex-shrink: 1;
+  border-color: transparent;
+  border-style: none;
+  border-width: 0;
+  margin-right: 44px;
+  border-radius: 0px 0px 0px 0px;
+  margin-bottom: 0;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: rgba(255, 255, 255, 1);
+}
+
 .landing-page-text04 {
   top: 10px;
   left: 39px;
